<?xml version="1.0" encoding="utf-8"?>
<ScrollView    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
     android:background="@color/pane_background_color"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

            
    <!-- DIVE IN BEGINS-->

    <TextView
        style="@style/SubTitleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/NextMove" />

    <LinearLayout
        android:id="@+id/moves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_selector"
            android:text="@string/Moves" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/createmove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_selector"
            android:text="@string/CreateMove" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_selector"
            android:text="@string/Profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_selector"
            android:text="@string/Logout" />
    </LinearLayout>

</LinearLayout>
</ScrollView>